2013-09-13  Sam Weinig  <sam@webkit.org>

        Fix a few lingering ScriptStates.

        Reviewed by Andy Estes.

        * Modules/indexeddb/IDBCursor.cpp:
        (WebCore::IDBCursor::update):
        * Modules/indexeddb/IDBObjectStore.cpp:
        (WebCore::IDBObjectStore::add):
        (WebCore::IDBObjectStore::put):
        * bindings/cpp/WebNativeNodeFilterCondition.cpp:
        (WebNativeNodeFilterCondition::acceptNode):
        * bindings/cpp/WebNativeNodeFilterCondition.h:
        * dom/CustomElementConstructor.cpp:
        (WebCore::CustomElementConstructor::create):
        * dom/CustomElementConstructor.h:
        * dom/CustomElementRegistry.cpp:
        (WebCore::CustomElementRegistry::registerElement):
        * dom/CustomElementRegistry.h:
        * plugins/PluginView.cpp:
        (WebCore::PluginView::performRequest):

2013-09-13  Darin Adler  <darin@apple.com>

        Rename confusingly named "runtimeObject" functions
        https://bugs.webkit.org/show_bug.cgi?id=121339

        Also CTTE: HTMLElement.

        Reviewed by Sam Weinig.

        * bindings/js/JSHTMLAppletElementCustom.cpp:
        (WebCore::JSHTMLAppletElement::putDelegate): Renamed.
        (WebCore::JSHTMLAppletElement::getCallData): Renamed.
        * bindings/js/JSHTMLEmbedElementCustom.cpp:
        (WebCore::JSHTMLEmbedElement::putDelegate): Renamed.
        (WebCore::JSHTMLEmbedElement::getCallData): Renamed.
        * bindings/js/JSHTMLObjectElementCustom.cpp:
        (WebCore::JSHTMLObjectElement::putDelegate): Renamed.
        (WebCore::JSHTMLObjectElement::getCallData): Renamed.

        * bindings/js/JSPluginElementFunctions.cpp:
        (WebCore::isPluginElement): Changed to take HTMLElement&.
        (WebCore::pluginInstance): Ditto.
        (WebCore::pluginScriptObjectFromPluginViewBase): Updated for name and type change.
        (WebCore::pluginScriptObject): Ditto.
        (WebCore::pluginElementPropertyGetter): Ditto.